--- a/an_/内存.md
+++ b/an_/内存.md
@@ -88,8 +88,8 @@
         * **命中:** 访问1次快表 + 访问1次内存。
         * **未命中:** 访问1次快表 + 访问1次内存(查页表) + 访问1次内存(取数据)。
     * **公式 (默认查页表在内存):**
-        * `EAT = α * (t_tlb + t_mem) + (1 - α) * (t_tlb + t_mem + t_mem)`
-        * 简化后: `EAT = t_tlb + α * t_mem + (1 - α) * 2 * t_mem`
+        * $EAT = \alpha \times (t_{tlb} + t_{mem}) + (1 - \alpha) \times (t_{tlb} + t_{mem} + t_{mem})$
+        * 简化后: $EAT = t_{tlb} + \alpha \times t_{mem} + (1 - \alpha) \times 2 \times t_{mem}$
 * **多级页表 (解决页表过大的问题):**
     * **思想:** 给页表本身也进行分页，建立“页表的页表”，即**页目录**。
     * **地址变换:** `逻辑地址 = 一级页号(页目录索引) + 二级页号(页表索引) + 页内偏移量`
@@ -147,7 +147,7 @@
         * **对换性:** 作业的页可以在内存和外存之间换来换去。
         * **虚拟性:** 从逻辑上扩充了内存容量，让你感觉拥有一个比物理内存大得多的内存空间。
 
-##### **3.2.2 - 3.2.3 请求分页与页框分配**
+##### **3.2.2 请求分页管理方式**
 
 * **核心考点:**
     * 请求分页的页表机制（增加了哪些标志位）。
@@ -166,6 +166,20 @@
             * 若无空闲页框，执行**页面置换算法**，淘汰一页。
         5.  更新页表（修改状态位等）。
         6.  返回原指令，重新执行。
+
+##### **3.2.3 页框分配**
+
+* **核心考点:**
+    * 驻留集的概念。
+    * 页面分配与置换策略（固定/可变分配，全局/局部置换）。
+* **形象记忆法:**
+    * **驻留集:** 分配给一个进程的**物理页框**的集合。
+    * **分配策略:**
+        * **固定分配:** 进程运行期间，分到的页框数**不变**。
+        * **可变分配:** 进程运行期间，分到的页框数**可变**。
+    * **置换策略:**
+        * **局部置换:** 缺页时，只能从**自己**的驻留集里换出一页。
+        * **全局置换:** 缺页时，可以从**所有**进程的页框中（通常是系统空闲或优先级低的）换出一页。
 
 ##### **3.2.4 页面置换算法**
 
@@ -202,6 +216,25 @@
     * **原因:** 分配给进程的物理块太少，连最基本的运行需求都满足不了。
     * **工作集:** 进程在**最近一段时间**（工作集窗口 `Δ`）内**实际访问的页面集合**。
     * **解决抖动:** 操作系统应保证分配给进程的物理块数量 **大于等于** 其工作集大小。
+
+##### **3.2.6 内存映射文件**
+
+* **核心考点:**
+    * 内存映射文件的基本思想。
+* **形象记忆法:**
+    * **思想:** 将一个磁盘文件“假装”成内存中的一个数组。
+    * **过程:** 程序员可以像访问内存数组一样直接读写文件内容，操作系统在后台自动处理缺页和数据写回磁盘。
+    * **优点:** 编程方便，也便于多进程共享文件（映射同一个文件到各自的地址空间）。
+
+##### **3.2.7 虚拟存储器性能影响因素**
+
+* **核心考点:**
+    * 影响缺页率的因素。
+* **记忆清单:**
+    * **页面大小:** 太大内碎片多，太小页表长。
+    * **物理块数量:** 分配得越多，缺页越少（但有上限）。
+    * **页面置换算法:** 好算法（如LRU）缺页少。
+    * **程序编写方式:** 程序的局部性越好，缺页越少。
 
 ##### **3.2.8 地址翻译（综合题）**
 
