--- a/an_/文件.md
+++ b/an_/文件.md
@@ -1,12 +1,12 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
-好的，各位同学，我们来到第四章《文件管理》。这是操作系统三大核心的最后一章，相比进程和内存，文件管理的概念更加具体，与我们日常使用电脑的操作息息相关。本章的考点集中在**文件物理结构**、**目录管理**和**磁盘空间管理**上，计算题模式固定，概念题重在理解。
+好的，各位同学，我们来到第四章《文件管理》。这是操作系统三大核心（进程、内存、文件）之一，也是考研的**高分重灾区**，计算题模式固定，概念题重在理解。本章我们要扮演一个“图书管理员”，搞清楚计算机是如何管理硬盘上成千上万个文件的。
 
 ---
 
 ### **第4章 文件管理**
 
-本章我们要扮演一个“图书管理员”，搞清楚计算机是如何管理硬盘上成千上万个文件的。核心是解决两个问题：文件内部数据怎么组织（逻辑与物理结构），以及文件之间怎么组织（目录）。
+本章的核心是解决两个问题：文件内部数据怎么组织（逻辑与物理结构），以及文件之间怎么组织（目录）。
 
 ---
 
@@ -64,33 +64,45 @@
     * **为什么需要`open`/`close`?**
         * 后续的`read/write`操作，用户只需提供**文件描述符**（一个数字），系统直接查内存里的“打开文件表”即可，**无需每次都去硬盘上遍历目录**，极大提高了效率。
 
+##### **4.1.4 文件保护**
+
+* **核心考点:**
+    * 访问控制列表 (ACL)。
+    * 精简访问控制（拥有者、组、其他）。
+* **形象记忆法 (图书馆门禁):**
+    * **目的:** 控制谁能对这本书（文件）做什么操作。
+    * **访问类型:** `读(r)`、`写(w)`、`执行(x)`。
+    * **精简访问控制:**
+        * **拥有者 (Owner):** 这本书是你捐的，你有最高权限。
+        * **组 (Group):** 你所在学院的师生可以借阅。
+        * **其他 (Others):** 校外人员只能看，不能借。
+
 ##### **4.1.5 文件的逻辑结构**
 
 * **核心考点:**
     * 文件的两种逻辑结构。
-* **形象记忆法 (用户视角):**
-    * **无结构文件 (流式文件):** 文件就是一长串字符流。如 `.txt` 文件。想找特定内容？从头读到尾。
-    * **有结构文件 (记录式文件):** 文件由一个个记录组成。如数据库文件，每条记录都是一个学生的信息。
+* **形象记忆法 (用户视角看书的内容):**
+    * **无结构文件 (流式文件):** 书就是一长串没有章节的文字流。如 `.txt` 文件。想找特定内容？从头读到尾。
+    * **有结构文件 (记录式文件):** 书由一个个逻辑单元（记录）组成。如学生信息表，每条记录就是一个学生的信息。
 
 ##### **4.1.6 文件的物理结构**
 
 * **核心考点:**
     * 三种文件分配方式（物理结构）的原理、优缺点对比（**选择题、大题高频**）。
     * **索引分配的文件大小计算 (大题核心)**。
-* **形象记忆法 (硬盘上如何存放文件):**
+* **形象记忆法 (硬盘上如何存放书):**
     * **连续分配:**
-        * **原理:** 文件必须存放在**连续**的磁盘块上。
+        * **原理:** 一本书的所有页必须存放在**连续**的书架上。
         * **优点:** 顺序读写速度极快（磁头不用动）。
-        * **缺点:** 容易产生**外部碎片**；文件创建时必须知道大小，不易扩展。
+        * **缺点:** 容易产生**外部碎片**；放书前必须知道书有多厚，不易增删。
     * **链接分配:**
-        * **原理:** 文件存放在**离散**的盘块里，每个盘块都有一个**指针**指向下一个盘块。
-        * **优点:** 无外部碎片，文件易于扩展。
-        * **缺点:** **只支持顺序访问**，不支持随机访问（想访问第100块，必须先访问前99块）；指针占用空间；一个指针损坏，整个文件报销。
-        * **FAT表 (显式链接):** 把所有指针集中存放在内存的**文件分配表 (FAT)** 中，解决了随机访问慢和可靠性问题。
+        * **原理:** 书的每一页可以放在**任意空闲**的书架位置，每页末尾都写着“下一页在xxx书架”。
+        * **优点:** 无外部碎片，书的厚度可动态增减。
+        * **缺点:** **只支持顺序访问**，不支持随机访问（想看第100页，必须先翻前99页）；指针占用空间；一页损坏，后面的都找不到了。
     * **索引分配:**
-        * **原理:** 为每个文件创建一个**索引块**，这个索引块就是一个“地址目录”，里面存放了文件数据所在的所有盘块的地址。
-        * **优点:** **支持随机访问**，无外部碎片，文件易于扩展。
-        * **缺点:** 索引块本身要占用磁盘空间。
+        * **原理:** 每本书配一个**索引块**（目录页），这个索引块记录了书中每一页分别存放在哪个书架上。
+        * **优点:** **支持随机访问**，无外部碎片，书的厚度可动态增减。
+        * **缺点:** 索引块本身要占用书架空间。
 * **计算题模板 (混合索引文件最大容量):**
     * **场景:** UNIX系统中，一个inode有13个地址项`i.addr[0]~i.addr[12]`。
         * `0-9`: 10个**直接地址**。
@@ -99,29 +111,51 @@
         * `12`: 1个**三级间接地址**。
     * **已知条件:** 磁盘块大小 `B` (如 4KB)，地址项大小 `P` (如 4B)。
     * **计算步骤:**
-        1.  **一个索引块能存多少地址:** `N = B / P` (如 `4KB/4B = 1024`)。
+        1.  **一个索引块能存多少地址:** $N = B / P$ (如 `4KB/4B = 1024`)。
         2.  **计算各级索引能表示的文件大小:**
-            * **直接地址:** `大小_直 = 10 * B`
-            * **一级间接:** `大小_一 = N * B`
-            * **二级间接:** `大小_二 = N * N * B = N² * B`
-            * **三级间接:** `大小_三 = N * N * N * B = N³ * B`
+            * **直接地址:** $大小_{直} = 10 \times B$
+            * **一级间接:** $大小_{一} = N \times B$
+            * **二级间接:** $大小_{二} = N \times N \times B = N² \times B$
+            * **三级间接:** $大小_{三} = N \times N \times N \times B = N³ \times B$
         3.  **计算最大文件大小:**
-            * `最大容量 = 大小_直 + 大小_一 + 大小_二 + 大小_三`
+            * $最大容量 = 大小_{直} + 大小_{一} + 大小_{二} + 大小_{三}$
 
 ---
 
 #### **4.2 目录**
 
-##### **4.2.2 目录结构**
+##### **4.2.1 基本概念**
+
+* **核心考点:**
+    * 目录是实现“按名存取”的关键。
+* **形象记忆法:**
+    * **目录 = 图书馆的索引目录册**，它的核心作用是记录了“书名”到“书的物理位置”的映射。
+
+##### **4.2.2 结构**
 
 * **核心考点:**
     * 单级、两级、树形目录结构的特点。
 * **形象记忆法:**
-    * **单级目录:** 整个系统只有**一个大文件夹**，所有文件都放里面。**缺点:** 文件重名、查找慢。
-    * **两级目录:** **一个主文件夹**，下面为**每个用户**创建一个专属文件夹。**解决了重名问题**。
-    * **树形目录:** **文件夹里可以套文件夹**。层次清晰，分类方便。现代OS都用这个。
-        * **绝对路径:** 从根目录 `/` 开始的完整路径。
-        * **相对路径:** 从当前工作目录开始的路径。
+    * **单级目录:** 整个图书馆只有**一本索引册**，所有书的卡片都在里面。**缺点:** 书名不能重复、查找慢。
+    * **两级目录:** **一个总索引册**，下面为**每个读者**配一个私人的索引册。**解决了书名重复问题**。
+    * **树形目录:** **索引册里可以套子索引册**（按类别分）。层次清晰，分类方便。现代OS都用这个。
+        * **绝对路径:** 从图书馆大门口 (`/`) 开始的完整寻路指南。
+        * **相对路径:** 从你当前所在阅览室（当前工作目录）开始的寻路指南。
+
+##### **4.2.3 操作**
+
+* **核心考点:**
+    * 创建、删除、显示目录等基本操作。
+* **形象记忆法:**
+    * 就是对“索引册”本身的操作，比如增加一个分类、删除一个分类等。
+
+##### **4.2.4 实现**
+
+* **核心考点:**
+    * 线性列表和哈希表两种实现方式。
+* **形象记忆法 (索引册的内部实现):**
+    * **线性列表:** 索引册里的条目**按顺序排列**。查找时从头翻到尾。
+    * **哈希表:** 根据书名通过一个函数**直接算出**它在索引册的第几页。查找速度快，但可能存在“冲突”（两本书算出同一页码）。
 
 ##### **4.2.5 文件共享**
 
@@ -134,20 +168,27 @@
         * **特点:**
             * inode中有一个**链接计数 (link count)**，记录有多少个硬链接指向它。
             * 删除文件时，只是删除目录项，`link count--`。只有当 `link count` 变为0时，才真正删除文件数据。
-            * **不能跨文件系统，不能链接目录**。
+            * **不能跨文件系统（图书馆），不能链接目录（索引册）**。
     * **软链接 (Symbolic Link):**
         * **原理:** 创建一个**特殊的文件**，文件内容是**另一个文件的路径名**。
-        * **类比:** Windows的“**快捷方式**”。
+        * **类比:** Windows的“**快捷方式**”。它是一张纸条，上面写着“要找的书在XX分类的XX索引册里”。
         * **特点:**
             * 它有自己独立的inode。
-            * 删除**源文件**后，软链接**失效** (悬空指针)。
+            * 删除**源文件**后，软链接**失效** (纸条还在，但按图索骥找不到了)。
             * **可以跨文件系统，可以链接目录**。
 
 ---
 
 #### **4.3 文件系统**
 
-##### **4.3.1 - 4.3.2 文件系统结构与布局**
+##### **4.3.1 文件系统结构**
+
+* **核心考点:**
+    * 文件系统的层次结构。
+* **形象记忆法:**
+    * 类似于I/O软件的层次，从上到下为：用户 -> 逻辑文件系统 -> 文件组织模块 -> 基本文件系统 -> I/O控制层。每一层都调用下一层提供的服务，并向上一层隐藏细节。
+
+##### **4.3.2 文件系统布局**
 
 * **核心考点:**
     * 文件系统在磁盘上的整体布局。
@@ -168,13 +209,14 @@
         * `1` 代表该块**已占用**。
         * **优点:** 查找连续的空闲块非常方便。
 * **计算题模板 (位示图定位):**
-    * **已知条件:** 磁盘块号 `i` (注意题目说明是从0还是1开始)。`w` 为每行/每字的位数 (如32)。
-    * **假设从0开始编号:**
-        * 它在位示图的第 `j` 行 (字): `j = i / w`
-        * 在第 `j` 行的第 `k` 位: `k = i % w`
-    * **假设从1开始编号:**
-        * 它在位示图的第 `j` 行 (字): `j = (i - 1) / w`
-        * 在第 `j` 行的第 `k` 位: `k = (i - 1) % w`
+    * **已知条件:** 磁盘块号 `i`。`w` 为每行/每字的位数 (如32)。
+    * **关键点:** **确认块号`i`是从0还是1开始！**
+    * **若块号从0开始:**
+        * 它在位示图的第 `j` 行 (字): $j = i / w$
+        * 在第 `j` 行的第 `k` 位: $k = i \% w$
+    * **若块号从1开始:**
+        * 它在位示图的第 `j` 行 (字): $j = (i - 1) / w$
+        * 在第 `j` 行的第 `k` 位: $k = (i - 1) \% w$
 
 ##### **4.3.4 虚拟文件系统 (VFS)**
 
@@ -184,6 +226,15 @@
     * **VFS = 标准化接口/翻译官**
     * **作用:** Linux/Windows等系统支持多种文件系统（如FAT32, NTFS, EXT4）。VFS提供了一个**统一的、抽象的接口**。用户程序的所有文件操作都先发给VFS，VFS再根据具体的文件系统类型，“翻译”成对应的操作指令发给具体的文件系统驱动。
     * **目的:** 屏蔽底层不同文件系统的差异，使用户程序可以用同样的方式操作任何文件系统的文件。
+
+##### **4.3.5 文件系统挂载**
+
+* **核心考点:**
+    * 挂载的概念。
+* **形象记忆法 (接入新书架):**
+    * 你有一个主图书馆（根文件系统`/`）。现在运来一个装满书的移动书架（U盘）。
+    * **挂载 (Mount):** 把这个移动书架推到图书馆某个空房间（如`/mnt/usb`这个空目录），并挂上牌子。
+    * 之后，访问`/mnt/usb`目录，看到的就是这个移动书架上的书了。
 
 ---
 第四章的内容与实际使用联系紧密，通过“图书馆”这个核心比喻，可以将文件、目录、FCB/inode、打开/关闭等概念串联起来。计算题主要集中在索引文件大小和位示图定位，掌握模板即可轻松应对。祝大家复习顺利！
