--- a/an_/进程与线程.md
+++ b/an_/进程与线程.md
@@ -118,29 +118,49 @@
 
 #### **2.2 CPU调度**
 
-##### **2.2.1 - 2.2.4 调度的概念**
+##### **2.2.1 调度的概念**
 
   * **核心考点:**
       * 三级调度：高级、中级、低级。
-      * 调度方式：抢占式、非抢占式。
   * **形象记忆法:**
       * **三级调度:**
           * **高级调度 (作业调度):** “**招生办**”。决定把哪些作业从外存（全国考生）调入内存（录取）。控制并发的进程数量。
           * **中级调度 (内存调度):** “**教务处**”。决定把哪个暂时不用的进程从内存（在校生）换到外存（休学生），即“挂起”。
           * **低级调度 (进程调度):** “**任课老师**”。决定就绪队列（班里举手的学生）中下一个谁上CPU（回答问题）。**最基本、最频繁**的调度。
+
+##### **2.2.2 调度的实现**
+
+  * **核心考点:**
+      * 调度程序、分派程序。
+      * 调度时机。
+      * 调度方式：抢占式、非抢占式。
+  * **形象记忆法:**
       * **调度方式:**
           * **非抢占式:** “**君子模式**”。一旦上了CPU，不主动下（运行完或阻塞）绝不让位。
           * **抢占式:** “**霸道模式**”。更高优先级的来了，或者时间片用完了，就得被强制让位。
+
+##### **2.2.3 调度的目标**
+
+  * **核心考点:**
+      * CPU利用率、系统吞吐量。
+      * 周转时间、等待时间、响应时间。
+  * **重要公式:**
+      * **周转时间** = 完成时间 - 到达时间
+      * **带权周转时间** = 周转时间 / 运行时间
+      * **等待时间** = 周转时间 - 运行时间 (或 = 开始执行时间 - 到达时间)
+
+##### **2.2.4 进程切换**
+
+  * **核心考点:**
+      * 上下文切换的含义和过程。
+  * **形象记忆法:**
+      * **上下文切换:** CPU要换一个进程运行时，必须先**保存当前进程的“工作现场”**（寄存器值等）到它的PCB中，然后再**加载新进程的“工作现场”**。这个过程就像一个演员演完一场戏，卸妆换行头，准备下一场。
 
 ##### **2.2.5 典型的调度算法**
 
   * **核心考点:**
       * 各种调度算法的规则、优缺点。
       * 计算周转时间、等待时间。（**大题考点**）
-  * **重要公式:**
-      * **周转时间** = 完成时间 - 到达时间
-      * **带权周转时间** = 周转时间 / 运行时间
-      * **等待时间** = 周转时间 - 运行时间 (或者 = 开始执行时间 - 到达时间)
   * **解题模板 (通用):**
     1.  **画图:** 绘制**甘特图**（时间轴），清晰表示每个时刻哪个进程在运行。
     2.  **列表:** 创建一个表格，包含进程名、到达时间、运行时间、完成时间、周转时间、带权周转时间、等待时间。
@@ -175,24 +195,45 @@
 
 #### **2.3 同步与互斥**
 
-##### **2.3.1 - 2.3.4 核心概念与信号量**
+##### **2.3.1 同步与互斥的基本概念**
 
   * **核心考点:**
       * 临界资源、临界区。
       * 同步与互斥的区别。
-      * 信号量机制 (PV操作) 的原理与应用（**大题必考**）。
   * **形象记忆法:**
       * **临界资源:** 一次只允许一个进程使用的资源，如打印机、共享变量。
       * **临界区:** 访问临界资源的那段**代码**。
       * **同步 vs 互斥:**
           * **互斥 (Mutual Exclusion):** 竞争关系。你上厕所时得锁门，别人不能进。是一种**对资源的竞争**。
           * **同步 (Synchronization):** 协作关系。A进程负责生产数据，B进程负责处理数据，必须A生产完，B才能处理。是一种**对执行顺序的协调**。
-      * **信号量与PV操作:**
-          * **信号量 (Semaphore) `S`:** 一个特殊的变量，代表**资源数量**。
-          * **P操作 `wait(S)`:** 申请资源。`S--`，如果 `S < 0`，则进程阻塞等待。
-              * **记忆:** **P**asseren (德语：通过)，想通过先申请。
-          * **V操作 `signal(S)`:** 释放资源。`S++`，如果 `S <= 0`，则唤醒一个等待进程。
-              * **记忆:** **V**rijgeven (德语：释放)。
+
+##### **2.3.2 实现临界区互斥的基本方法**
+
+  * **核心考点:**
+      * 了解软件（单标志、双标志、Peterson）和硬件（关中断、TSL/Swap指令）实现方法的基本思想和缺陷。
+  * **记忆要点:**
+      * 软件方法实现复杂且有缺陷（如忙等）。
+      * 硬件方法效率高，但`关中断`对多核无效，`TSL/Swap`仍存在忙等问题。
+      * **重点是为引出信号量做铺垫**。
+
+##### **2.3.3 互斥锁**
+
+  * **核心考点:**
+      * 互斥锁是实现互斥的最简单工具。
+  * **形象记忆法:**
+      * 就是一个**二进制信号量**，只有`锁上`和`打开`两种状态。`acquire()`获取锁，`release()`释放锁。
+
+##### **2.3.4 信号量**
+
+  * **核心考点:**
+      * 信号量机制 (PV操作) 的原理与应用（**大题必考**）。
+      * 记录型信号量的实现（遵循“让权等待”）。
+  * **形象记忆法:**
+      * **信号量 (Semaphore) `S`:** 一个特殊的变量，代表**资源数量**。
+      * **P操作 `wait(S)`:** 申请资源。`S--`，如果 `S < 0`，则进程阻塞等待。
+          * **记忆:** **P**asseren (德语：通过)，想通过先申请。
+      * **V操作 `signal(S)`:** 释放资源。`S++`，如果 `S <= 0`，则唤醒一个等待进程。
+          * **记忆:** **V**rijgeven (德语：释放)。
   * **PV操作解题模板:**
       * **互斥模型:**
           * 定义互斥信号量 `mutex = 1`。
@@ -300,16 +341,25 @@
             2.  **同时拿起左右两根筷子。** (将拿筷子操作放入一个 `P(mutex)` 和 `V(mutex)` 之间)。
             3.  **奇数号哲学家先拿左后拿右，偶数号反之。**
 
+##### **2.3.6 管程**
+
+  * **核心考点:**
+      * 管程是对信号量机制的封装，是更高级的同步工具。
+  * **形象记忆法:**
+      * **管程 = 带锁的房间**
+          * **封装性:** 把共享资源和所有对它的操作都**锁在一个房间里**。
+          * **互斥性:** 房间**一次只允许一个人进入**，天然保证了互斥。
+          * **条件变量:** 房间里有**等候室 (条件变量)**。如果进入后发现条件不满足（如缓冲区是空的），可以去等候室`wait()`，并**让出房间**给别人用。当别人改变了条件（如放入产品），就去等候室`signal()`一下，唤醒等待的人。
+
 -----
 
 #### **2.4 死锁**
 
-##### **2.4.1 - 2.4.2 死锁概念与预防**
+##### **2.4.1 死锁的概念**
 
   * **核心考点:**
       * 死锁的定义。
       * 死锁产生的**四个必要条件**（**必背**）。
-      * 死锁预防：破坏四个条件之一。
   * **形象记忆法:**
       * **死锁:** 多个进程因互相等待对方持有的资源而造成的僵局。
       * **四个必要条件 (记忆口诀: 互请不循):**
@@ -317,11 +367,16 @@
         2.  **请 (请求和保持条件):** 拿着自己的，还想要别人的。
         3.  **不 (不可剥夺条件):** 别人的东西不能抢。
         4.  **循 (循环等待条件):** 形成一个“你等我，我等他，他等你”的环路。
-      * **死锁预防 (破坏疗法):**
-        1.  破坏**互斥**: 把独占资源变共享（不现实）。
-        2.  破坏**请求和保持**: 一次性申请所有资源（资源浪费）。
-        3.  破坏**不可剥夺**: 允许抢占资源（实现复杂）。
-        4.  破坏**循环等待**: 按序分配资源（限制多）。
+
+##### **2.4.2 死锁预防**
+
+  * **核心考点:**
+      * 通过破坏四个必要条件之一来预防死锁。
+  * **形象记忆法 (破坏疗法):**
+    1.  破坏**互斥**: 把独占资源变共享（不现实）。
+    2.  破坏**请求和保持**: 一次性申请所有资源（资源浪费）。
+    3.  破坏**不可剥夺**: 允许抢占资源（实现复杂）。
+    4.  破坏**循环等待**: 按序分配资源（限制多）。
 
 ##### **2.4.3 死锁避免 (银行家算法)**
 
@@ -359,10 +414,24 @@
       * 死锁解除：剥夺资源、撤销进程。
   * **形象记忆法:**
       * **死锁检测:** “事后诸葛亮”。不预防也不避免，而是定期检查系统里有没有死锁环路。
-          * **方法:** 不断寻找可以满足其资源请求并顺利运行结束的进程，然后释放其资源。如果最后还有进程无法被释放，说明它们处于死- 锁状态。
+          * **方法:** 不断寻找可以满足其资源请求并顺利运行结束的进程，然后释放其资源。如果最后还有进程无法被释放，说明它们处于死锁状态。
       * **死锁解除:**
           * **剥夺资源:** 抢！从一个进程手里抢走资源给另一个。
           * **撤销进程:** 杀！强制终止一个或多个死锁进程。简单粗暴。
+
+-----
+
+#### **2.5 本章疑难点**
+
+  * **进程 vs 程序:**
+      * 程序是**静态**的指令集合（菜谱），进程是**动态**的执行过程（做菜）。
+      * 一个程序可以对应多个进程，一个进程也可以执行多个程序。
+  * **银行家算法原理:**
+      * 核心在于**每次分配前的安全检查**，确保系统总能找到一条出路（安全序列），让所有进程最终都能完成。它是一种**事前避免**策略。
+  * **同步 vs 互斥:**
+      * **互斥**是“**不允许同时**”，是竞争关系。
+      * **同步**是“**必须按序**”，是协作关系。
+      * 互斥是一种特殊的同步关系。
 
 -----
 
