--- a/an_/文件.md
+++ b/an_/文件.md
@@ -1,50 +1,60 @@
 <div style="float: left; width: 64%; padding: 1%;">
+[TOC]
+<br>
 
 好的，各位同学，我们来到第四章《文件管理》。这是操作系统三大核心（进程、内存、文件）之一，也是考研的**高分重灾区**，计算题模式固定，概念题重在理解。本章我们要扮演一个“图书管理员”，搞清楚计算机是如何管理硬盘上成千上万个文件的。
 
 ---
 
-### **第4章 文件管理**
+### <span style="color: lightgray;">第4章 文件管理
 
 本章的核心是解决两个问题：文件内部数据怎么组织（逻辑与物理结构），以及文件之间怎么组织（目录）。
 
 ---
 
-#### **4.1 文件系统基础**
+#### **basic**
 
-##### **4.1.1 文件的基本概念**
+##### <span style="color: lightgray;">concept</span><span style="color: gray;">(3
 
 * **核心考点:**
     * 文件的定义、属性。
 * **形象记忆法:**
-    * **文件系统 = 图书馆**
-    * **文件 = 书**
-    * **文件内容 = 书的正文**
-    * **文件属性 = 书的版权页** (书名、作者、出版社、ISBN号等)。
+    * 文件**系统** = **图书馆**
+    * **文件** = **书**
+    * 文件**内容** = 书的**正文**
+    * 文件**属性** = 书的**版权页** (书名、作者、出版社、ISBN号等)。
         * **名称:** 唯一标识符。
         * **类型:** .txt, .jpg, .exe...
         * **位置:** 文件在硬盘上的存放地址。
         * **大小:** 文件占了多少空间。
         * **保护:** 谁能读、谁能写。
         * **时间:** 创建、最后修改、最后访问的时间。
-
-##### **4.1.2 文件控制块 (FCB) 和索引节点 (inode)**
+---
+##### 
+##### 文件控制块 (**FCB**)<span style="color: gray;">→</span>  索引节点 (**inode**)
 
 * **核心考点:**
     * FCB的作用。
     * 索引节点 (inode) 对FCB的改进。
 * **形象记忆法:**
-    * **FCB (文件控制块) = 图书的索引卡片**
+    * **FCB** (文件控制块) = 图书的**索引卡片**
         * **内容:** 包含了文件所有的元数据（文件名、属性、物理地址等）。
-        * **存放:** 所有的FCB集合在一起，就形成了**文件目录**。
+        * **存放:** 所有的FCB集合在一起，就形成了**文件<span style="border: 1px solid black; padding: 5px; display: inline-block;">目录**</span>
+            
+            ---
         * **缺点:** 如果目录里文件很多，每张卡片信息又全又大，找一本书（文件）就要翻很久的卡片，效率低。
-    * **索引节点 (inode):** **卡片瘦身术**
+            
+        ---
+    * 索引节点 (**inode**): 卡片瘦身术 
         * **思想:** 把文件名和其它信息分开。
         * **目录项:** 只存放 `文件名` + `索引节点编号 (inode号)`。目录项变得很小。
         * **inode表:** 单独存放所有`inode`，每个`inode`包含了除文件名外的所有其它文件属性。
-        * **优点:** 目录检索速度大大加快，因为现在只需要在一个小本子（目录文件）里根据文件名找到编号，再去对应的仓库（inode表）里取详细信息。
-
-##### **4.1.3 文件的操作**
+        * **优点:** 目录检索速度大大加快
+          * 现在只需要在一个小本子（目录文件）里根据<span style="border-bottom: 2px solid black;">文件名</span>找到编号
+          * 再去对应的仓库（inode表）里取详细信息。
+---
+##### 
+##### **操作**<span style="color: gray;">(3 2 1
 
 * **核心考点:**
     * 基本文件操作。
@@ -54,20 +64,22 @@
         * `create`: 办一张新的索引卡片，找个空书架。
         * `delete`: 撕掉索引卡片，回收书架。
         * `read/write`: 读/写书的内容。
-    * **`open`操作 (借书流程):**
+    * **`open`**操作 (借书流程):
         1.  用户提供**文件名** (书名)，发起`open`请求。
-        2.  操作系统（图书管理员）根据书名去**目录**（总索引卡）里查找，找到对应FCB/inode。
-        3.  管理员把这张卡片的信息复制到内存里的“**打开文件表**”（今日借阅登记表）中。
-        4.  管理员返还给用户一个**数字**，叫**文件描述符** (借书证上的编号)。
+            -  操作系统（图书管理员）根据书名去**目录**（总索引卡）里查找，找到对应FCB/**inode**
+               -  把这张卡片的信息copy到内存里的“**打开文件表**”（今日借阅登记表）中
+        2.  管理员返还给用户一个**数字**，叫**文件<span style="border-bottom: 3px dotted black;">描述符</span>** (借书证上的编号)。
+        ---
     * **`close`操作 (还书流程):**
-        * 用户提供**文件描述符**，系统根据编号找到“打开文件表”中的条目，释放它，并将可能已修改的元数据写回磁盘。
+        * 用户提供**文件<span style="border-bottom: 3px dotted black;">描述符</span>**，系统根据编号找到“打开文件表”中的条目，<span style="border-bottom: 2px solid black;">释放</span>它，并将可能已修改的元数据写回磁盘。
+    ---
     * **为什么需要`open`/`close`?**
-        * 后续的`read/write`操作，用户只需提供**文件描述符**（一个数字），系统直接查内存里的“打开文件表”即可，**无需每次都去硬盘上遍历目录**，极大提高了效率。
-
-##### **4.1.4 文件保护**
+        * 后续的`read/write`操作，用户只需提供**文件<span style="border-bottom: 3px dotted black;">描述符</span>**（一个数字），系统直接查内存里的“打开文件表”即可，**无需每次都去硬盘上遍历目录**，极大提高了效率。
+---
+##### **保护**<span style="color: gray;">(rwx | ogo
 
 * **核心考点:**
-    * 访问控制列表 (ACL)。
+    * 访问控制列表 (**ACL**)。
     * 精简访问控制（拥有者、组、其他）。
 * **形象记忆法 (图书馆门禁):**
     * **目的:** 控制谁能对这本书（文件）做什么操作。
@@ -76,163 +88,185 @@
         * **拥有者 (Owner):** 这本书是你捐的，你有最高权限。
         * **组 (Group):** 你所在学院的师生可以借阅。
         * **其他 (Others):** 校外人员只能看，不能借。
-
-##### **4.1.5 文件的逻辑结构**
+---
+##### 
+##### 逻辑结构<span style="color: gray;">(2
 
 * **核心考点:**
     * 文件的两种逻辑结构。
 * **形象记忆法 (用户视角看书的内容):**
-    * **无结构文件 (流式文件):** 书就是一长串没有章节的文字流。如 `.txt` 文件。想找特定内容？从头读到尾。
-    * **有结构文件 (记录式文件):** 书由一个个逻辑单元（记录）组成。如学生信息表，每条记录就是一个学生的信息。
+    * **无结构文件 (流式..):** 书就是<span style="border-bottom: 2px solid black;">一长串</span>没有章节的文字流。如 `.txt` 文件。想找特定内容？从头读到尾。
+    * **有..文件 (记录式..):** 书由一个个逻辑单元（记录）组成。如学生信息表，每条记录就是一个学生的信息。
 
-##### **4.1.6 文件的物理结构**
+##### 🧮**物理..**<span style="color: gray;">(3分配 + 1索引count
 
 * **核心考点:**
     * 三种文件分配方式（物理结构）的原理、优缺点对比（**选择题、大题高频**）。
-    * **索引分配的文件大小计算 (大题核心)**。
+    * **索引**分配的**文件大小**计算 (大题核心)
 * **形象记忆法 (硬盘上如何存放书):**
     * **连续分配:**
         * **原理:** 一本书的所有页必须存放在**连续**的书架上。
         * **优点:** 顺序读写速度极快（磁头不用动）。
         * **缺点:** 容易产生**外部碎片**；放书前必须知道书有多厚，不易增删。
-    * **链接分配:**
+    * **链接..:**
         * **原理:** 书的每一页可以放在**任意空闲**的书架位置，每页末尾都写着“下一页在xxx书架”。
         * **优点:** 无外部碎片，书的厚度可动态增减。
-        * **缺点:** **只支持顺序访问**，不支持随机访问（想看第100页，必须先翻前99页）；指针占用空间；一页损坏，后面的都找不到了。
-    * **索引分配:**
+        * **缺点:** 只支持**顺序访问**，不支持随机访问（想看第100页，必须先翻前99页）；指针占用空间；一页损坏，后面的都找不到了。
+        ---
+    * **索引..:**
         * **原理:** 每本书配一个**索引块**（目录页），这个索引块记录了书中每一页分别存放在哪个书架上。
-        * **优点:** **支持随机访问**，无外部碎片，书的厚度可动态增减。
+        * **优点:** 支持**随机访问**，无外部碎片，书的厚度可动态增减。
         * **缺点:** 索引块本身要占用书架空间。
+    ---
 * **计算题模板 (混合索引文件最大容量):**
     * **场景:** UNIX系统中，一个inode有13个地址项`i.addr[0]~i.addr[12]`。
-        * `0-9`: 10个**直接地址**。
-        * `10`: 1个**一级间接地址**。
-        * `11`: 1个**二级间接地址**。
-        * `12`: 1个**三级间接地址**。
-    * **已知条件:** 磁盘块大小 `B` (如 4KB)，地址项大小 `P` (如 4B)。
+        * `0-9`: 10个**直接地址**
+        * 
+        * `10`: 1个**一级间接地址**
+        * `11`: 1个**二..**
+        * `12`: 1个**三..**
+    * 已知: 磁盘块大小 `B` (如 4KB)，地址项大小 `P` (如 4B)。
     * **计算步骤:**
-        1.  **一个索引块能存多少地址:** $N = B / P$ (如 `4KB/4B = 1024`)。
-        2.  **计算各级索引能表示的文件大小:**
+        1.  一个**索引块**能存多少地址: <span style="border: 1px solid black; padding: 5px; display: inline-block;">$N = B / P$ </span>(如 `4KB/4B = 1024`)。
+        2.  计算**各级**索引能表示的文件大小:
             * **直接地址:** $大小_{直} = 10 \times B$
             * **一级间接:** $大小_{一} = N \times B$
-            * **二级间接:** $大小_{二} = N \times N \times B = N² \times B$
-            * **三级间接:** $大小_{三} = N \times N \times N \times B = N³ \times B$
-        3.  **计算最大文件大小:**
-            * $最大容量 = 大小_{直} + 大小_{一} + 大小_{二} + 大小_{三}$
+            * **二..:** $大小_{二} =  N² \times B$
+            * **三..:** $大小_{三}= N³ \times B$
+        3.  **sum**计算最大文件大小:
+            * $最大容量 = 大小_{直} + .._{一} + .._{二} + .._{三}$
 
 ---
+---
+#### **目录**
 
-#### **4.2 目录**
-
-##### **4.2.1 基本概念**
+##### <span style="color: gray;">concept</span>
 
 * **核心考点:**
-    * 目录是实现“按名存取”的关键。
+    * 目录是实现“<span style="border-bottom: 2px solid black;">按名存取</span>”的关键。
 * **形象记忆法:**
-    * **目录 = 图书馆的索引目录册**，它的核心作用是记录了“书名”到“书的物理位置”的映射。
+    * 目录: 图书馆的**索引目录册**，它的核心作用是记录了“书名”到“书的物理位置”的映射。
 
-##### **4.2.2 结构**
+##### **结构** <span style="color: gray;">(3
 
 * **核心考点:**
     * 单级、两级、树形目录结构的特点。
 * **形象记忆法:**
     * **单级目录:** 整个图书馆只有**一本索引册**，所有书的卡片都在里面。**缺点:** 书名不能重复、查找慢。
-    * **两级目录:** **一个总索引册**，下面为**每个读者**配一个私人的索引册。**解决了书名重复问题**。
-    * **树形目录:** **索引册里可以套子索引册**（按类别分）。层次清晰，分类方便。现代OS都用这个。
+    * **两级..:** **一个总索引册**，下面为**每个读者**配一个私人的索引册。**解决了书名重复问题**。
+    * **树形..:** **索引册里可以套子索引册**（按类别分）。层次清晰，分类方便。现代OS都用这个。
         * **绝对路径:** 从图书馆大门口 (`/`) 开始的完整寻路指南。
-        * **相对路径:** 从你当前所在阅览室（当前工作目录）开始的寻路指南。
+        * **相对..:** 从你当前所在阅览室（当前工作目录）开始的寻路指南。
 
-##### **4.2.3 操作**
+---
+##### 
+##### <span style="color: gray;">操作</span>
 
 * **核心考点:**
     * 创建、删除、显示目录等基本操作。
 * **形象记忆法:**
     * 就是对“索引册”本身的操作，比如增加一个分类、删除一个分类等。
 
-##### **4.2.4 实现**
+##### **实现**<span style="color: gray;">(2
 
 * **核心考点:**
     * 线性列表和哈希表两种实现方式。
 * **形象记忆法 (索引册的内部实现):**
-    * **线性列表:** 索引册里的条目**按顺序排列**。查找时从头翻到尾。
-    * **哈希表:** 根据书名通过一个函数**直接算出**它在索引册的第几页。查找速度快，但可能存在“冲突”（两本书算出同一页码）。
+    * **线性列表:** 索引册里的条目**按顺序排列**。查找时<u>从头翻到尾</u>。
+    * **哈希表:** 根据书名通过一个函数**直接算出**它在索引册的<span style="border-bottom: 2px solid black;">第几页</span>。查找速度快，但可能存在“冲突”（两本书算出同一页码）。
 
-##### **4.2.5 文件共享**
+---
+##### 
+##### 文件共享<span style="color: gray;">(2link
 
 * **核心考点:**
-    * 硬链接和软链接（符号链接）的实现原理和区别（**选择题高频**）。
+    * 硬链接 软链接（符号链接）的实现原理和区别（**选择题高频**）。
 * **形象记忆法:**
     * **硬链接 (Hard Link):**
-        * **原理:** 多个目录项中的**inode号**指向**同一个inode**。
+        * **原理:** 多个目录项中的**inode**号 指向**同一个inode**。
         * **类比:** 给一本书起了两个不同的书名，但它们指向的是图书馆里**同一本实体书**。
         * **特点:**
             * inode中有一个**链接计数 (link count)**，记录有多少个硬链接指向它。
             * 删除文件时，只是删除目录项，`link count--`。只有当 `link count` 变为0时，才真正删除文件数据。
-            * **不能跨文件系统（图书馆），不能链接目录（索引册）**。
-    * **软链接 (Symbolic Link):**
+            * 不能..（图书馆），不能..（索引册）
+        ---
+    * **软.. (Symbolic ..):**
         * **原理:** 创建一个**特殊的文件**，文件内容是**另一个文件的路径名**。
         * **类比:** Windows的“**快捷方式**”。它是一张纸条，上面写着“要找的书在XX分类的XX索引册里”。
         * **特点:**
             * 它有自己独立的inode。
             * 删除**源文件**后，软链接**失效** (纸条还在，但按图索骥找不到了)。
-            * **可以跨文件系统，可以链接目录**。
+            * 可以**跨**文件**系统**，可以**链接目录**。
 
 ---
+---
+#### **文件系统**
 
-#### **4.3 文件系统**
-
-##### **4.3.1 文件系统结构**
+##### **结构**<span style="color: gray;">(1 3 1
 
 * **核心考点:**
-    * 文件系统的层次结构。
+    * 层次结构
 * **形象记忆法:**
-    * 类似于I/O软件的层次，从上到下为：用户 -> 逻辑文件系统 -> 文件组织模块 -> 基本文件系统 -> I/O控制层。每一层都调用下一层提供的服务，并向上一层隐藏细节。
-
-##### **4.3.2 文件系统布局**
+    * 类似于I/O软件的层次，从上到下为：
+      * user -> **逻辑**文件系统 -> 文件组织**模块** -> <b><span style="color: gray;">基本</span></b>文件系统 -> I/O控制层。
+    * 每一层都调用下一层提供的服务，并向上一层隐藏细节。
+---
+##### **布局**<span style="color: gray;">(2块 3区
 
 * **核心考点:**
-    * 文件系统在磁盘上的整体布局。
+    * 文件系统在磁盘上的整体布局
 * **形象记忆法 (磁盘分区蓝图):**
-    1.  **引导块 (Boot Block):** 分区的“启动器”，存放启动该分区OS的代码。
-    2.  **超级块 (Super Block):** 分区的“说明书”，记录整个文件系统的核心信息（块大小、inode数量、空闲块信息等）。**超级块损坏，文件系统就崩溃**。
+    1.  **引导**块 (Boot Block): 分区的“启动器”，存放启动该分区OS的代码。
+    2.  **超级**块 (Super ..): ..“说明书”，记录整个文件系统的核心<span style="border-bottom: 2px solid black;">信息</span>（块大小、inode数量、空闲块信息等）。
+        -  其**损坏**，文件系统就**崩溃**。
+        ---
     3.  **空闲空间管理区:** 记录哪些盘块是空闲的（如位示图）。
-    4.  **inode区:** 集中存放所有文件的inode。
-    5.  **数据区:** 存放所有文件的实际数据。
-
-##### **4.3.3 外存空闲空间管理**
+    4.  **inode..:** 集中存放所有文件的inode
+    5.  **数据..:** 存放所有文件的实际数据
+---
+##### 
+##### 🧮**外存空闲空间管理**<span style="color: gray;">(位示图0/1
 
 * **核心考点:**
     * 位示图法的原理和计算。
 * **形象记忆法:**
-    * **位示图 (Bitmap):** 用一个二进制位串来表示所有磁盘块。
+    * **位示图 (Bitmap):** 用一个<span style="border-bottom: 2px solid black;">二进制</span>位串来表示所有磁盘块。
         * `0` 代表该块**空闲**。
-        * `1` 代表该块**已占用**。
+        * `1` ..**已占用**。
         * **优点:** 查找连续的空闲块非常方便。
+    ---
 * **计算题模板 (位示图定位):**
-    * **已知条件:** 磁盘块号 `i`。`w` 为每行/每字的位数 (如32)。
-    * **关键点:** **确认块号`i`是从0还是1开始！**
-    * **若块号从0开始:**
-        * 它在位示图的第 `j` 行 (字): $j = i / w$
-        * 在第 `j` 行的第 `k` 位: $k = i \% w$
-    * **若块号从1开始:**
-        * 它在位示图的第 `j` 行 (字): $j = (i - 1) / w$
-        * 在第 `j` 行的第 `k` 位: $k = (i - 1) \% w$
+    * 已知:
+      * 磁盘块号 `i`
+      * 每行/每字的位数`w`  (如32)
+    * **key:** 块号`i`是从0 or 1开始
+      * 从**0**开始:
+          * 在位示图的第 `j` 行 (字): $j  = \frac{i }{w}$
+          * 在第 `j` 行的第 `k` 位: $k = i \% w$
+      * ..**1**..:
+          * ..: $j = \frac{(i - 1)}{w}$
+          * ...: $k = (i - 1) \% w$
 
-##### **4.3.4 虚拟文件系统 (VFS)**
+---
+##### 
+##### <span style="color: gray;">虚拟文件系统</span> **(VFS)** <span style="color: lightgray;">统一
 
 * **核心考点:**
-    * VFS的作用。
+    * ..作用
 * **形象记忆法:**
-    * **VFS = 标准化接口/翻译官**
-    * **作用:** Linux/Windows等系统支持多种文件系统（如FAT32, NTFS, EXT4）。VFS提供了一个**统一的、抽象的接口**。用户程序的所有文件操作都先发给VFS，VFS再根据具体的文件系统类型，“翻译”成对应的操作指令发给具体的文件系统驱动。
-    * **目的:** 屏蔽底层不同文件系统的差异，使用户程序可以用同样的方式操作任何文件系统的文件。
+    * VFS: 标准化**接口**or**翻译官**
+    * **作用:** 
+      * Linux/Windows等系统支持<span style="border-bottom: 2px solid black;">多种文件</span>系统（如FAT32, NTFS, EXT4）。
+      * VFS提供了一个**统一的、抽象的接口**。用户程序的所有文件操作都先发给VFS，VFS再根据具体的文件系统类型，“翻译”成对应的操作指令发给具体的文件系统<span style="border-bottom: 2px solid black;">驱动</span>。
+    * **目的:** 
+      * 屏蔽底层不同文件系统的差异，使用户程序可以用同样的方式操作任何文件系统的文件。
 
-##### **4.3.5 文件系统挂载**
+##### <span style="color: gray;">文件系统挂载</span> <span style="color: lightgray;">(1
 
 * **核心考点:**
-    * 挂载的概念。
+    * 挂载的概念
 * **形象记忆法 (接入新书架):**
-    * 你有一个主图书馆（根文件系统`/`）。现在运来一个装满书的移动书架（U盘）。
+    * 你有一个主图书馆（根文件系统`/`）。现在运来一个装满书的<span style="border-bottom: 2px solid black;">移动书架</span>（U盘）。
     * **挂载 (Mount):** 把这个移动书架推到图书馆某个空房间（如`/mnt/usb`这个空目录），并挂上牌子。
     * 之后，访问`/mnt/usb`目录，看到的就是这个移动书架上的书了。
 
