--- a/an_/概述.md
+++ b/an_/概述.md
@@ -1,82 +1,90 @@
 <div style="float: left; width: 64%; padding: 1%;">
-
+[TOC]
+<br>
 好的，各位同学，大家好！我是你们的计算机考研辅导名师 Gemini。操作系统这门课，知识点琐碎，概念抽象，很多同学学起来感觉很头疼。别怕，今天我将带大家用最简单、最直观的方式，把第一章《计算机系统概述》的考点彻底梳理清楚，让你背得快、记得牢、考场上想不起来都难！
 
 我们正式开始。
 
 ---
 
-### **第1章 计算机系统概述**
+### <span style="color: lightgray;">第1章 计算机系统概述
 
 本章是操作系统的“世界观”，告诉你操作系统是什么、从哪来、怎么工作。考查形式以**选择题**为主，分值不高但考点密集，属于必拿分的部分。
 
 ---
 
-#### **1.1 操作系统的基本概念**
+#### <span style="color: lightgray;">OS基本概念
 
-##### **1.1.1 操作系统的概念**
+##### <span style="color: lightgray;">概念
 
 * **核心考点:**
     * 操作系统的定义、地位和作用。
 * **形象记忆法:**
-    * **操作系统 = 政府 / 大管家**
+    * 政府 / 大管家
         * **向下管家当得好:** 管理计算机的硬件（CPU、内存、硬盘等），让这些硬件资源（土地、矿产）被高效、有序地利用。
         * **向上服务做得棒:** 为用户和应用程序（人民、雇主）提供简单易用的接口和服务，你不用关心底层硬件怎么工作的，想用打印机，下个命令就行。
-    * **地位:** 它是最底层、最核心的**系统软件**，其他所有软件都运行在它之上。没有它，电脑就是一堆废铁。
-
-##### **1.1.2 操作系统的特征**
+    * **地位:** 它是最底层、最核心的**系统软件**，其他所有<u>软件</u>都运行<u>在它之上</u>。没有它，电脑就是一堆废铁。
+    
+    ---
+##### **特征**<span style="color: gray;">(4:并 共 虚 异
 
 * **核心考点:**
     * **四大基本特征：并发、共享、虚拟、异步。** （重中之重，选择题高频考点）
 * **形象记忆法:**
     * **并发 (Concurrence):** "你一个人**一段时间内**，一会儿吃饭，一会儿玩手机"。
-        * **关键词:** `同一时间间隔`。
+        * **关键词:** 同一时间<span style="border: 1px solid black; padding: 5px; display: inline-block;">间隔</span>。
         * **宏观看:** 吃饭和玩手机两件事都在推进。
         * **微观看:** 任一`时刻`你只在做一件事（要么夹菜，要么划手机）。
         * **vs 并行 (Parallelism):** "你和你朋友**同一时刻**，一个在吃饭，一个在玩手机"。
             * **关键词:** `同一时刻`，需要多个处理器支持。
+        ---
     * **共享 (Sharing):** "公共资源大家用"。
         * **互斥共享:** 就像厕所的坑位，同一时间只能有一个进程用，用完下一个才能进。例如：打印机。
         * **同时共享:** 就像图书馆的藏书，很多进程可以"同时"访问。例如：硬盘中的可重入代码文件。
     * **虚拟 (Virtual):** "无中生有，化一为多"。
         * **时分复用 (虚拟处理器):** 一个CPU通过极快的切换，让多个程序感觉自己“独占”了一个CPU。
-        * **空分复用 (虚拟内存):** 明明只有8G物理内存，却能运行需要16G内存的程序。
+        * **空分.. (..内存):** 明明只有8G物理内存，却能运行需要16G内存的程序。
     * **异步 (Asynchronism):** "走走停停，时机不定"。
         * 多道程序环境下，程序不是一口气执行完的，会因为等待资源、被更高优先级的程序抢占等原因暂停。因此，程序的执行是不可预知的。
-
-##### **1.1.3 操作系统的目标和功能**
+    ---
+##### **目标 功能**<span style="color: gray;">(4:处存 文设+2:命令 程序
 
 * **核心考点:**
     * OS作为**管理者**的四大功能：处理机管理、存储器管理、文件管理、设备管理。
-    * OS作为**服务提供者**的两种接口：命令接口、程序接口（系统调用）。
+    * ..**服务提供者**的两种接口：命令接口、程序接口（系统调用）。
 * **形象记忆法:**
-    * **OS 的双重身份:**
-        * **身份一：资源管理者 (政府的四大部门)**
-            * **处理机管理 (组织部):** 决定哪个进程（干部）上CPU（岗位）工作，怎么调度。
-            * **存储器管理 (国土规划局):** 给进程分配内存（土地），回收内存，保证大家不互相干扰。
-            * **文件管理 (档案局):** 管理硬盘上的文件（档案），负责文件的存取、保护。
-            * **设备管理 (物资调配中心):** 管理打印机、键盘等所有外设（公共物资），负责分配和回收。
-        * **身份二：服务提供者 (政府的两个窗口)**
-            * **命令接口 (办事大厅):** 你（用户）可以直接通过敲命令（联机命令）或者写好一个脚本（脱机命令）让系统做事。
-            * **程序接口 (公文系统):** 你的应用程序通过**系统调用 (System Call)** 来请求操作系统提供服务，这是程序获得OS服务的**唯一**途径。
+    * OS 的双重身份:
+        * 身份一：资源管理者 (政府的四大部门)
+            * **处理机**管理 (组织部): 决定哪个进程（干部）上CPU（岗位）工作，怎么调度。
+            * **存储器**管理 (国土规划局): 给进程分配内存（土地），回收内存，保证大家不互相干扰。
+                
+                ---
+            * **文件**管理 (档案局): 管理硬盘上的文件（档案），负责文件的存取、保护。
+            * **设备**管理 (物资调配中心): 管理打印机、键盘等所有外设（公共物资），负责分配和回收。
+        * 身份二：服务提供者 (政府的两个窗口)
+            * **命令**接口 (办事大厅): 你（用户）可以直接通过敲命令（联机命令）或者写好一个脚本（脱机命令）让系统做事。
+            * **程序**接口 (公文系统):你的应用程序通过**系统调用 (System Call)** 来请求操作系统提供服务，这是程序获得OS服务的**唯一**途径。
 
 ---
 
-#### **1.2 操作系统发展历程**
+#### **发展历程**<span style="color: gray;">(手 单多 分实
 
 这部分主要考查不同阶段操作系统的特点和解决的核心问题。
 
 * **核心考点:**
     * 多道批处理系统的优缺点。
     * 分时系统和实时系统的特征。
-* **演进路线记忆法:** **"从无到有，从单到多，从人机分离到人机交互"**
-    * **手工操作:** **没人管**。用户独占机器，CPU利用率极低。
-    * **单道批处理:** **有个监工**（监督程序）。作业自动下一个接一个处理，但内存中始终只有一个作业，CPU常在等待I/O，还是很闲。
+* 演进路线记忆法: "从无到有，从单到多，从人机分离到人机交互"
+    * **手工**操作: **没人管**。用户独占机器，CPU利用率极低。
+        
+        ---
+    * **单道**批处理: **有个监工**（监督程序）。作业自动下一个接一个处理，但内存中始终只有一个作业，CPU常在等待I/O，还是很闲。
         * **特征:** 自动性、顺序性、单道性。
-    * **多道批处理:** **监工变聪明了**。内存中同时放多个作业，A作业等I/O时，CPU立刻去执行B作业。
+    * **多道**批处理: **监工变聪明了**。内存中同时放多个作业，A作业等I/O时，CPU立刻去执行B作业。
         * **优点:** CPU利用率高，系统吞吐量大。
-        * **缺点:** **无人机交互**，作业交上去要等很久才有结果。
+        * **缺点:** **无 人机交互**，作业交上去要等很久才有结果。
         * **记忆:** **多、宏并、微串** (内存中程序多、宏观上并行、微观上串行)。
+        ---
     * **分时系统:** **实现人人交互**。CPU时间被切成很小的“时间片”，轮流服务每个用户，让每个用户都感觉自己在独享电脑。
         * **特征:** **交互性、多路性、独立性、及时性**。
     * **实时系统:** **追求“快”和“准”**。必须在严格的时间限制内完成任务。
@@ -84,24 +92,24 @@
         * **软实时:** 偶尔超时没关系，如12306购票系统。
 
 ---
-
-#### **1.3 操作系统的运行环境**
+---
+#### **运行环境**
 
 这部分是理解操作系统工作原理的基础，概念性极强，是选择题高频轰炸区。
 
-##### **1.3.1 处理器运行模式**
+##### **处理器运行模式**<span style="color: gray;">(2:核,用 2:特,非
 
 * **核心考点:**
     * 用户态（目态）与核心态（管态）的区别。
     * 特权指令与非特权指令。
 * **形象记忆法:**
     * **两种状态:**
-        * **核心态 (Kernel Mode):** CPU是“皇帝”，拥有最高权限，可以执行任何指令（包括**特权指令**），运行操作系统内核程序。
+        * **核心态 (Kernel Mode):** CPU是“皇帝”，拥有<span style="border-bottom: 2px solid black;">最高</span>权限，可以执行任何指令（包括**特权指令**），运行操作系统内核程序。
         * **用户态 (User Mode):** CPU是“平民”，权限受限，只能执行**非特权指令**，运行用户应用程序。
     * **特权指令:** 像“调兵遣将”、“修改国策”这种指令，只能皇帝（核心态）来做。例如：I/O操作、修改内存保护、开关中断。
     * **目的:** 保护操作系统内核不被应用程序随意破坏。
-
-##### **1.3.2 中断和异常的概念**
+    ---
+##### 中断<span style="color: gray;">(外</span> <span style="color: purple;">异常</span><span style="color: gray;">(内</span>
 
 * **核心考点:**
     * 中断和异常的定义与区别。
@@ -116,69 +124,76 @@
             * **Fault (故障):** `a / 0`，除数为零，指令本身有错，处理完后可返回**当前指令**重新执行。
             * **Trap (陷阱):** `system call`，**有意为之**的异常，主动请求进入核心态，处理完后返回**下一条指令**。
             * **Abort (终止):** 硬件故障，没救了，直接终止程序。
-
-##### **1.3.3 系统调用**
+    ---
+##### 系统<span style="color: green;">调用</span><span style="color: gray;">(用户→核心:3:Trap 执行 return
 
 * **核心考点:**
-    * 系统调用的概念、目的和过程。
+    * 概念、目的和过程
 * **形象记忆法:**
     * **什么是系统调用:** 应用程序请求操作系统办事的“申请报告”。
     * **为什么需要:** 应用程序在**用户态**，想做的事（如读文件、申请内存）需要执行**特权指令**，但它没权限。只能通过系统调用，委托**核心态**的操作系统来代办。
     * **执行过程 (三步走):**
-        1.  **用户态传参 + 执行`陷入指令` (Trap):** 用户程序把参数准备好，然后执行一条特殊的`Trap`指令，CPU状态立马从**用户态 -> 核心态**。
-        2.  **核心态执行服务程序:** 操作系统根据参数，执行相应的内核代码。
-        3.  **核心态返回结果:** 办完事后，操作系统将结果返回给应用程序，CPU状态从**核心态 -> 用户态**。
+        1.  用户态**传参 + 执行`陷入指令` (Trap):** 用户程序把参数准备好，然后执行一条特殊的`Trap`指令，CPU状态立马从**用户态 -> 核心态**。
+        2.  **核心态<span style="border-bottom: 2px solid black;">执行</span>服务程序:** 操作系统根据参数，执行相应的内核代码。
+        3.  核心态**返回**结果: 办完事后，操作系统将结果返回给应用程序，CPU状态从**核心态 -> 用户态**。
 
 ---
-
-#### **1.4 操作系统结构**
+---
+#### **OS结构**<span style="color: gray;">(宏:心, 微:户
 
 * **核心考点:**
     * 宏内核与微内核的对比。
 * **形象记忆法:**
-    * **宏内核 (Monolithic Kernel):** "**大政府**"模式。
-        * **结构:** 操作系统所有主要功能（进程管理、内存管理、文件系统等）都打包在**一个巨大**的内核程序里，运行在**核心态**。
+    * **宏**内核 (Monolithic Kernel): "**大政府**"模式。
+        * **结构:** 操作系统所有主要功能（进程管理、内存管理、文件系统等）都打包在**一个巨大**的内核程序里，运行在<b><span style="color: green;">核心</span>态</b>
         * **优点:** 模块间直接通信，**效率高**。
         * **缺点:** 一个模块出bug，整个系统可能崩溃，**可靠性、灵活性差**。
         * **代表:** Linux, Windows。
-    * **微内核 (Microkernel):** "**小政府，大社会**"模式。
-        * **结构:** 内核只保留最最基本的功能（进程通信、基本调度），其他功能（文件系统、设备驱动）都作为独立的服务进程，运行在**用户态**。
+    * **微**内核 (Microkernel):**小政府，大社会**"模式。
+        * **结构:** 内核只保留最最基本的功能（进程通信、基本调度），其他功能（文件系统、设备驱动）都作为独立的服务进程，运行在 <b>**用户**态</b>。
         * **优点:** 服务进程间隔离，一个崩了不影响其他，**可靠性、灵活性、安全性高**。
         * **缺点:** 服务间通信需要经过微内核中转，频繁切换用户态/核心态，**效率低**。
         * **代表:** 鸿蒙OS。
 
 ---
 
-#### **1.5 操作系统引导 (Boot)**
+#### 引导 (Boot) <span style="color: gray;">(3 2 1: 自找M 分P start
 
 * **核心考点:**
     * 计算机开机后，操作系统是如何被加载到内存并运行起来的。
-* **引导过程记忆链:** **"硬件自检 -> 找引导盘 -> 加载MBR -> 找活动分区 -> 加载PBR -> 启动OS"**
-    1.  **POST (Power-On Self-Test):** 按下电源，BIOS（固化在ROM里）开始**硬件自检**。
-    2.  **选择启动设备:** BIOS根据设定的顺序（如U盘>硬盘）找到第一个可引导的设备。
-    3.  **加载 MBR (Master Boot Record):** 读取引导设备的第一扇区（MBR），MBR里有**分区表**。
-    4.  **定位活动分区:** MBR扫描分区表，找到被标记为“活动”的分区（装有OS的分区）。
-    5.  **加载 PBR (Partition Boot Record):** 控制权交给活动分区，读取该分区的引导记录PBR。
-    6.  **启动加载程序:** PBR负责找到并加载操作系统内核到内存。
-    7.  **OS接管:** 内核开始运行，初始化各种系统服务，最终显示桌面，引导完成。
+* 引导过程记忆链: "硬件**自**检 -> **找**引导盘 -> 加载**M**BR -> 找活动**分**区 -> 加载**P**BR -> 启动OS":
+    <br>
+    1.  **POST** (Power-On Self-Test): 按下电源，BIOS（固化在ROM里）开始**硬件自检**。
+    2.  选择启动设备: BIOS根据设定的顺序（如U盘>硬盘）**找**到第一个可引导的设备。
+    3.  加载 **M**BR (Master Boot Record): 读取引导设备的第一扇区（MBR），MBR里有**分区表**。
+        
+        ---
+    4.  定位活动**分**区: MBR扫描分区表，找到被标记为“活动”的分区（装有OS的分区）。
+    5.  加载 **P**BR (Partition Boot Record): 控制权交给活动分区，读取该分区的引导记录PBR。
+        
+        ---
+    6.  **启**动加载程序: PBR负责找到并加载操作系统内核到内存。
+    -  **OS接管:** 内核开始运行，初始化各种系统服务，最终显示桌面，引导完成。
 
 ---
-
-#### **1.6 虚拟机**
+---
+#### **虚拟机**<span style="color: gray;">(2: 双系统_virtual box
 
 * **核心考点:**
     * 虚拟机的概念和两类虚拟机的区别。
 * **形象记忆法:**
     * **虚拟机是什么:** 在一台物理电脑上，用软件模拟出多台逻辑上独立的“假”电脑。
-    * **两类虚拟机管理器 (Hypervisor):**
-        * **第一类 (裸金属型):** Hypervisor **直接安装在硬件上**，像一个迷你操作系统。多个客户OS（如Windows, Linux）再安装在它之上。
+        
+        ---
+    * **两类**虚拟机管理器 (Hypervisor):
+        * 第一类 (**裸金属**型): Hypervisor  直接安装在**硬件**上，像一个迷你操作系统。多个客户OS（如Windows, Linux）再安装在它之上。
             * **记忆:** **Hypervisor是地基，客户OS是楼房**。
             * **优点:** 性能高，隔离性好。
             * **例子:** VMware ESXi, KVM。
-        * **第二类 (托管型):** Hypervisor 作为一个**应用程序**，安装在一个已经存在的宿主操作系统（如Windows）上。
+        * **第二类 (托管型):** Hypervisor 作为一个 应用<span style="border: 1px solid black; padding: 5px; display: inline-block;">程序</span>，安装在一个已经存在的宿主操作系统（如Windows）上。
             * **记忆:** **宿主OS是地基，Hypervisor和客户OS都是楼房**。
             * **优点:** 安装简单，方便个人使用。
-            * **例子:** VMware Workstation, VirtualBox。
+            * **例子:** VMware Workstation, <u>VirtualBox</u>
 
 ---
 
