--- a/an_/进程与线程.md
+++ b/an_/进程与线程.md
@@ -244,14 +244,14 @@
       * 信号量机制 (PV操作) 的原理与应用（**大题必考**）。
       * 记录型信号量的实现（遵循“<span style="border-bottom: 3px dotted black;">让权等待</span>”）。
   * **形象记忆法:**
-      * **信号量 (Semaphore) `S`:** 一个特殊的变量，代表<span style="border: 1px solid black; padding: 5px; display: inline-block;">**资源数量**</span>。
+      * **信号量 (Semaphore) <span style="border: 1px solid black; padding: 5px; display: inline-block;">`S`</span>:** 一个特殊的变量，代表<span style="border: 1px solid black; padding: 5px; display: inline-block;">**资源数量**</span>。
       * **P操作 `wait(S)`:** 申请资源。`S--`，如果 `S < 0`，则进程阻塞等待。
           * **记忆:** **P**asseren (德语：通过)，想通过先申请。
       * **V操作 `signal(S)`:** 释放资源。`S++`，如果 `S <= 0`，则唤醒一个等待进程。
           * **记忆:** **V**rijgeven (德语：释放)。
   * **PV操作解题模板:**
       * **互斥模型:**
-          * 定义互斥信号量 `mutex = 1`。
+          * 定义互斥信号量 <span style="border: 1px solid black; padding: 5px; display: inline-block;">`mutex = 1`</span>
           * 将临界区代码夹在 `P(mutex)` 和 `V(mutex)` 之间。
         <!-- end list -->
         ```c
