过OS题: 概述: 结构(分层 模块)_引导_vmm

--- a/25_te/概述.md
+++ b/25_te/概述.md
@@ -65,6 +65,7 @@
                     - OS内核：中断service、..向量表、..屏蔽字
                         - 中断向量表：ds：数组
                             - type号+中断处理program入口地址
+                            - be created in **OS初始化**（before自检）
                 - TLB cache← 硬件
              
 
@@ -103,3 +104,59 @@
     - 资源访问、PT创建执行终止、system信息
 ---
 ---
+# 结构
+
+- structure
+    - 分层式
+        - 便于调试
+            - 单项依赖
+                - 不灵活，穿过多层add开销
+            - 不influence other层
+        - 最显著drawback
+            - 设计困难_（复杂）_
+    - 模块化
+        - all in 内核
+            - 内核外不影响；内..影响..
+        - **微**/宏内核
+            - 微
+                - 4feature：
+                    - core小
+                    - c/s模式
+                    - 机制 策略，分离
+                    - 面向对象
+                - 系统调用related操作等, in微内核
+                    - (include中断 trap、进程etc
+                - 适用于 分布式系统环境
+                - --
+                - often 用户态←→核心.. ←开销大，**No**高效
+                    - divide核心and other服务
+                        - ↑通信
+                        - 内核中 服务越少越稳定
+            - --
+            - windows use两者
+---
+# 引导
+
+- 引导program 2types：
+    - 引导扇区：启动管理器 （引导OS
+        - store in 硬盘
+    - 自举程序（BIOS组成部分
+        - 启动具体设备
+        - store in Rom
+
+- 硬件自检前
+    - cpu加电→ JMP指令to BIOS
+    - →登记..中断程序入口地址
+    
+- OS最终被加载到
+    - RAM
+---
+
+- only内核常驻 内存
+    - others需要时才调用
+
+---
+# virtual
+- VMM
+    - code量 ＜ 完整os..
+        
