Update 文件.md(目录：结构，实现，共享；FS: 布局，外存空闲空间管理(4，VFS

--- a/25_te/文件.md
+++ b/25_te/文件.md
@@ -1,8 +1,10 @@
 ## 文件
 - concept
     - unix
+        - >树形目录
         - 特殊文件
-            - ↑ all设备
+            - ↑ all设备均
+        - 索引结构in索引节点
     - 文件
         - 属性
             - stored in FCB的访问控制信息
@@ -71,6 +73,12 @@
     - 二进制
         - >1个file：五种权限、4类用户 可能同时拥有
             - 考虑max = 4*5=20
+        - --
+    - 防file受损
+        - 备份
+            - discern：
+                - 存取控制matrix
+                    - ↑多用户 权限保护
 - - -
 -  structure
     - 逻辑..(1 2 3
@@ -141,6 +149,12 @@
                                         - new记录 写入空闲
                                         - 上相邻记录 指向new记录
                     - 显式
+                        - 文件分配表(FAT
+                            - function：
+                                - record
+                                    - 块 先后link关系
+                                    - 空闲磁盘块
+                                        - ↑∴ also can 管理空闲磁盘块
                 ---
             -  索引
                 - >支持随机..
@@ -194,5 +208,131 @@
 
 ---
 ## 目录
-
+- 文件目录
+    - >按名存取
+---
+- 结构
+    - 平均查找长度
+        - 总长/2
+            - ↑ds中 (1+总长)/2
+    - 检索
+        - 顺序
+            - 路径名
+                - 一个分量未找到
+                    - stop
+        - hash
+            - 开销大
+                - have 冲突&溢出
+        ---
+    -  structure
+        - 根目录
+        - 当前..
+            - ↑相对path
+            - 加快文件检索
+            - --
+        - 多级..
+            - 解决命名冲突
+            - - -
+        -  树形..
+            - 文件描述符(索引号)
+                - ↑file open后使用
+- 操作
+- 实现
+    - 线性
+    - hash
+        
+- --
+- 文件共享
+    - 硬链接
+        - 引用计数值
+            - 1个 建立记2？
+                - 删除-1
+                - 为什么07题 F1 F2分别记2？
+    - 软..(符号
+        - >快捷方式
+            - 删除file时不会直接delete
+        - 引用计数值 
+            - 不受link文件影响
+                - 1个 就记1
+---
+---
 ## 文件系统
+- 文件系统
+    - 引入目的：
+        - 系统角度
+            - 组织分配 存储空间
+        - user..
+            - 按名存取
+                - ↑ 逻辑文件系统function
+                    - 按名存取
+                    - 文件目录组织管理
+                        - 文件名 → 文件描述符或文件句柄
+                    - 存储保护
+                        - ↑discern：with内存保护
+    - --
+    - 数量受限于
+        - FCB块数
+    - - -
+    - 文件存储空间管理
+        - = 文件**空闲**空间管理
+- base
+    - structure
+        - 从上到下
+            - 
+    - 布局
+        - 2块
+            - 引导块
+                - >启动
+                    - 主引导扇区：
+                        - 分区表+引导program
+            - 超级块
+                - >核心
+        - 3区
+- --
+- 外存 空闲空间管理
+    - type
+        - 对外存file区管理
+            - goal
+                - improve 空间利用率
+        - --
+        - 空闲块管理：
+            - **位示图**
+                - ↑磁盘空间管理
+                - >离散or连续
+                - count
+                    - 求字/位号
+                        - >即 行列号
+                        - type:
+                            - 行/列号 从1始
+                                - row=(块号-1)DIV 字长+1
+                                - col=..  MOD..
+                            - ... 从0..
+                                - ？14题 (left
+                        - --
+                    - 用1位 表示簇数/页框
+                        - >总/分size 个数 即bit数
+                            - bit数/2^3=存储空间size
+                            - GB=2^30B
+                        - 求簇数
+                            - storage空间大小/簇size
+                        - 求所占storage空间大小
+        - 空闲盘块号栈：
+            - **成组链接**法
+                - >离散+连续
+                - discern：
+                    - 唯一 only离散分配
+                        - ↑空闲链表
+                    - only连续
+                        - ↑空闲表
+ 
+  
+- --
+- VFS
+    - 对象类型
+        - 超级块
+        - 索引节点
+        - 目录项、文件
+            - ↑no数据
+- FS挂载
+- --
+- ？位示图
