--- a/25_te/内存.md
+++ b/25_te/内存.md
@@ -423,6 +423,231 @@
                 - file表项相关
                     - 打开file
                         - 可同时 以r/w 打开
+                        - share 同一 内存索引node
+                    - 打开文件表
+                        - only 1 表项
+                            - 包含属性
+                                - ↑ 只有一个system 打开表项
+                                - 同一file 多次open
+                                    - change 引用计数
+                                        - ↑关闭时
+                                            - 1p关闭, 计数-1
+                                            - till 计数=0
+                                                - 删除表项
+                                                    - ↑若仅1p，直接=0
+                                                        - 文件system：
+                                                            - 释放 F索引node所占**内存**空间
+                                                                - ↑不改变磁盘索引node
+                                                        - --
+                                                    - **关闭**file，不会删除 对应目录项
+                        - 表项内容
+                            - 各user 不一定same
+                                - ↑权限不同
+                                    - 读写指针不同
+        - --
+    - 性能(缺页率)影响因素
+        - 因素：
+            - 置换算法
+            - 工作集size
+            - p数量
+        - no
+            - 缓冲队列长度
+                - ↑放置淘汰page
+- --
+- 转换
+    - 地址翻译
+- --
+tip：每类资源都有调度算法
+一般 加大交换区 无效
+缺页中断次数←code(left
+- 原理？
+16进制地址 逻辑→物理
+- 过程                                - 共享
+                                    - 段S在共享段表中的段表项
+                                - both不再使用段S时才回收段S所占的内存空间
+        - --
+        - 操作
+            - cpu从内存取一次data
+                - 访存次数：2
+                    - ↑查 段表+拼成物理地址visit内存
+                - compared to
+                    - 段页表：3
+                    - ↑ 查 段表 + 查页表 ..
+                    - discern
+                        - 页表：N+1
+         - 地址结构：
+             - 二维
+                 - 段之间独立&段长不定
+                     - need 段名&段内地址
+                 - ∴ 段页式also
+             - discern
+                 - 页式
+                     - 一维
+                     - ↑单一线性(页长固定)
+    - --
+    - 段页
+        - >内piece
+        - 原理
+            - 分段
+                - 用户地址空间
+            - 分页
+                - 管理 物理存储space
+ ---
+动态重定位 与 动态分区、作业装入的联系？
+始址为什么 不加前？53
+多级页表？(left
+- 正反求
+    - 58与63 68'通式
+---
+---
+## 虚拟内存
+- >need 硬件&软件 支持
+    - **请求**机制
+        - ↑基于页or段or段页 从内存的调入/调出
+        - ↑离散分配(非连续分配技术)
+---
+- 页
+    - **请求**分页
+        - 虚拟存储管理
+            - >补充逻辑空间←（间接)扩充了内存
+                - based on **局部性**原理
+                -  无 一次性、驻留性
+                    - ↑与 基本分页的区别
+            - 特征：
+                - 多次 对换 虚拟
+            - 动态链接
+                - ↑？除了固定分区，其他方式应该都是动态吧
+        - max容量
+            - only由地址结构决定 (←与主存、外存无关
+                - ↑即地址R位数
+                    - eg.$2^{32}$
+        - --
+        - 缺页
+            - 没有对应page
+        - ==缺页中断==
+            - >页表对应状态位(有效位)A=0
+                - 
+                - os接管，去硬盘search对应页
+            - --
+            - 次数
+                - 对于顺序执行
+                    - =**页帧**数
+                        - ↑ 页帧=页框=内存块
+                            - = **物理块**，物理页
+                - --
+                - 由 数组code judge
+                    - >int 占 4B
+                        - 1字 according to题目要求取
+                    - judge 数组行数size with 页框size
+                        - ↑按行优先
+                        - ？计算模板是什么？为什么11题一个页框能存储，还会中断？(11、12
+                - --
+                - 页面置换
+                    - >whatever算法，每种页面第一次访问时不可能在内存中"
+                        - ↑内存满了&&没有需要的页，才进行调度算法
+                    - type：
+                        - 最佳置换
+                        - FIFO
+                            - 可分配 页数↑
+                                - 缺页中断次数 可能↑ or ↓
+                                    - Belady异常
+                                - discern：
+                                    - 页帧数 与 页数
+                        - LRU
+                            - 失效次数
+                                - =**缺页**中断发生次数
+                                    - ↑只要缺页 就会有中断
+                                        - ∴缺页中断发生：物理块中缺页 + 置换发生时
+                                            - ↑ 缺页发生，不一定淘汰(内存中有余位
+                                        - eg.![Screenshot_2025-10-08-13-51-55-632_cn](https://bluejedis.github.io/picx-images-hosting/OS/Screenshot_2025-10-08-13-51-55-632_cn.wps.moffice_eng-edit.64e8k0rdi1.webp)
+                            - 耗费高
+                                - need对访问time 记录+排序
+                        - clock
+                            - 地址变换
+                                <a id="section1"></a>
+                                - ？ 16进制虚拟→物理(55题
+            - --
+        - 虚拟地址
+            - >程序访问内存时use
+                - ↑count页表项时，only与虚拟地址有关
+                    - 与物理address无
+            - --
+            - element
+                - 页表
+                    - >见页面大小 count 页内偏移 占位
+                        - 总地址- 偏移量占位=页号
+                    - 由16进制逻辑地址 求物理
+                        - >16→2
+                        - ？19题 具体展开
+                            - lock相关相似题 [见上](#section1)
+                    - --
+                    - 页面大小
+                        - 页面越小
+                            - 页表项数量越多
+                                - 页表所占的空间就更大
+                                - 缺页率越高
+                                - IO操作更频繁
+                            - 浪费的空间越少，内存利用率越高
+                    ---
+                    - TLB
+                        - 平均访存时间
+                            - =命中率×TLB时间+not命中率×(TLB时间+页表时间)+ 内存访问时间
+                                - ↑页表t=内存访问t
+                            - --
+                        - 提高命中率
+                            - 加大
+                                - TLB容量
+                                - 页面大小
+                                    - ↑ 用较少的页面覆盖更大的地址空间，从而减少页表项，<span style="color:lightgray">因此可以提高TLB命中率</span>
+                                        - 增大表项，则降低
+                                        - 多级页表 无关
+
+    - --
+    - 页框分配
+        - 驻留集
+            - >已装入内存的页面的集合
+
+                - discern：工作集
+                    - p need访问的页面的集合 (in某段时间
+        - --
+        - 性能judge
+            - 交换空间的磁盘利用率high，else低
+                - 增加性能or提高cpu利用率
+                - ↑加内存or减少多道程序度数
+        - --
+    - 页面**置换算法**
+        - >参考修改位 和 访问位
+            - 磁盘 与 内存的交换
+                - not cpu 与 内存的交换
+        - 全局置换
+            - 不受**驻留集**限制 ←分配过'page 还能again
+                - ∴ 不可能与 固定分配共存
+- - -
+- element
+    - 抖动、工作集
+        - 抖动
+            - 频繁置换
+                - >all置换算法 皆有可能
+            - 消除：
+                - **工作集**页面 in**内存**中
+                    - 则不会产生缺页中断，即不会出现页面的调入/调出
+                    - not 虚拟存储器(including作为虚拟内存那部分硬盘
+            - --
+        - 工作集
+            - 窗口大小k
+                - ↑存储最近k次 & 去重
+    - --
+    - 内存映射文件
+        - 特点：
+            - 让p按 读写内存的way 读写文件
+                - ↑through 让文件映射到虚拟地址空间
+            - 按需加载
+            - 可多p 映射/共享 same文件
+                - --
+                <a id="sectionlink"></a>
+                - file表项相关
+                    - 打开file
+                        - 可同时 以r/w 打开
                     - 打开文件表
                         - only 1 表项
                             - 包含属性
